# buergeramt

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  test_config_load.py  test_game_init.py  test_no_examples.py
.github/instructions/: test-driven-development.instructions.md
buergeramt/: __init__.py  __main__.py  ai_characters.py  buergeramt_adventure.py  characters.py  game_engine.py  game_rules.py
buergeramt/characters/: FrauMueller.py  HerrSchmidt.py  HerrWeber.py  __init__.py  agent.py  agent_response.py  ai_agent.py  ai_characters.py  bureaucrat.py  context_manager.py  message_builder.py  persona_factory.py
buergeramt/characters/personas/: frau_mueller.py  herr_schmidt.py  herr_weber.py
buergeramt/engine/: agent_router.py  command_manager.py  game_engine.py
buergeramt/rules/: __init__.py  bureaucratic_loops.py  config.yaml  documents.py  evidence.py  game_config.py  game_state.py  loader.py  models.py  persona.py  procedures.py
buergeramt/utils/: __init__.py  game_logger.py
docs/: game_rules_and_mechanics.md
tests/: __init__.py  test_agent_integration.py  test_bureaucrat.py  test_config.py  test_engine.py  test_game_state.py  test_win_pathfinding.py
